# py-event-sourcing

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  README.md  basic_usage.py  benchmark.py  concepts.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: CONCEPDELETED.md  DESIGN.md
src/event_sourcing_v2/: __init__.py  adapters.py  factories.py  models.py  notifier.py  protocols.py  storage.py  stream.py  streams.py
src/event_sourcing_v2/adaptors/: sqlite.py
src/event_sourcing_v2/adaptors/sqlite/: factory.py  handle.py  notifier.py
src/py_event_sourcing/: __init__.py  models.py  protocols.py  stream.py
src/py_event_sourcing/adaptors/sqlite/: factory.py  filter_parser.py  handle.py  notifier.py  resource_manager.py
src/pysource/: __init__.py  models.py  protocols.py  stream.py
src/pysource.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pysource/adaptors/sqlite/: __init__.py  factory.py  filter_parser.py  handle.py  notifier.py  resource_manager.py
test/: test_core.py  test_filter_parser.py  test_sqlite_adapter.py
