[project]
name = "pysource"
version = "0.1.0"
description = "A minimal, `asyncio`-native event sourcing library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.7",
    "aiosqlite",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test", "tests"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
